// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDarkExampleWrapper should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-dark-example-wrapper"
  />
</DocumentFragment>
`;

exports[`BpkDarkExampleWrapper should render correctly with padded={true} 1`] = `
<DocumentFragment>
  <div
    class="bpk-dark-example-wrapper bpk-dark-example-wrapper--padded"
  />
</DocumentFragment>
`;
